# cli-completion

./: .gitignore  Cargo.toml  LICENSE  README.md  cli-schema.json  justfile
commands/: cli-completion.yaml  multipass.yaml  rsc.yaml
src/: app.rs  main.rs
