[package]
name = "cli-completion"
version = "0.1.0"
license = "MIT"
description = "cli completion generator for bash, zsh, fish"
authors = ["linux_china <libing.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
clap_generate = "3.0.0-beta.2"
yaml-rust = "0.4"
